--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,13 +1,17 @@
-<body>
-  {% include 'navbar.html' %} {% if latest_question_list %}
-  <ul>
-    {% for question in latest_question_list %}
-    <li>
-      <a href="/polls/{{ question.id }}/">{{ question.question_text }}</a>
-    </li>
-    {% endfor %}
-  </ul>
-  {% else %}
-  <p>No polls are available.</p>
-  {% endif %}
-</body>
+<!doctype html>
+{% extends 'main.html' %}
+<html>
+  <body>
+    {% if latest_question_list %}
+    <ul>
+      {% for question in latest_question_list %}
+      <li>
+        <a href="/polls/{{ question.id }}/">{{ question.question_text }}</a>
+      </li>
+      {% endfor %}
+    </ul>
+    {% else %}
+    <p>No polls are available.</p>
+    {% endif %}
+  </body>
+</html>
