--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 {% load static %}
 <html>
   <head>
@@ -11,7 +11,7 @@
   </head>
   <body>
     {% include 'navbar.html' %} {% block content %}
-    <h1>Home Page Content</h1>
+    <h1>Welcome to the Home Page</h1>
     {% endblock %}
   </body>
 </html>
