--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 {% load static %}
 <html lang="en">
   <head>
@@ -16,7 +16,7 @@
     </div>
     <div class="nav-links">
       <a href="{% url 'home' %}">Home</a>
-      <a href="{% url 'polls' %}">Polls</a>
+      <a href="{% url 'polls:polls' %}">Polls</a>
     </div>
   </div>
 </html>
