--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,9 +1,12 @@
-<body>
-  {% include 'navbar.html' %}
-  <h1>{{ question.question_text }}</h1>
-  <ul>
-    {% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }}</li>
-    {% endfor %}
-  </ul>
-</body>
+<!doctype html>
+{% extends 'main.html' %}
+<html>
+  <body>
+    <h1>{{ question.question_text }}</h1>
+    <ul>
+      {% for choice in question.choice_set.all %}
+      <li>{{ choice.choice_text }}</li>
+      {% endfor %}
+    </ul>
+  </body>
+</html>
