--- a/static/styles/navbar.css
+++ b/static/styles/navbar.css
@@ -39,6 +39,7 @@ body {
   display: inline-block;
   padding: 13px 10px 13px 10px;
   text-decoration: none;
+  text-align: center;
   color: #efefef;
 }
 
