--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="nav-links">
-      <a href="{% url 'home' %}">Home</a>
+      <a href="{% url 'home:home' %}">Home</a>
       <a href="{% url 'polls:polls' %}">Polls</a>
       <a href="#">Link 3</a>
       <a href="#">Link 4</a>
